# personal_deepseek_agent

./: .gitignore  README.md  app.py  install.sh  main.py  memory_maintenance.py  pyproject.toml  requirements.txt  scheduled_tasks.json  task_manager.py
.github/workflows/: feishu_assistant_processor.yaml  memory_maintenance.yaml
.streamlit/: config.toml
api/: client.py  search.py
assistant/: __init__.py
assistant/core/: __init__.py  config.py  llm_provider.py  orchestrator.py
assistant/memory/: __init__.py  memory_analyzer.py  memory_store.py  repository_manager.py
assistant/tools/: __init__.py  github_tool.py  search_tool.py
file_handlers/: creator.py  uploader.py
memory/: manager.py
system_api/: __init__.py  notifications.py  task_manager.py
system_install/: deepseek-chat.desktop  deepseek-chat.service
tests/: __init__.py  test_config.py  test_main.py  test_memory_store.py  test_tools.py
ui/: components.py
utils/: helpers.py  parsers.py
